# alx-low_level_programming

./: CMakeLists.txt  README.md  _putchar.c
0x00-hello_world/: 4-puts.c  6-size.c  README.md
0x01-variables_if_else_while/: 0-positive_or_negative.c  1-last_digit.c  README.md
0x02-functions_nested_loops/: 0-putchar.c  1-alphabet.c  10-add.c  11-print_to_98.c  2-print_alphabet_x10.c  3-islower.c  4-isalpha.c  5-sign.c  6-abs.c  7-print_last_digit.c  8-24_hours.c  9-times_table.c  README.md
0x03-debugging/: 0-main.c  READNE.md
0x04-more_functions_nested_loops/: 0-isupper.c  2-mul.c  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers.c  6-print_line.c  7-print_diagonal.c  8-print_square.c  README.md
0x05-pointers_arrays_strings/: 0-reset_to_98.c  1-swap.c  2-strlen.c  3-puts.c  4-print_rev.c  5-rev_string.c  6-puts2.c  7-puts_half.c  8-print_array.c  README.md
0x06-pointers_arrays_strings/: 100-rot13.c  101-main.c  2-strncpy.c  3-main.c  4-rev_array.c  5-string_toupper.c  7-leet.c  README.md
0x07-pointers_arrays_strings/: .README.md.swp  .README.swp  0-memset.c  2-strchr.c  3-strspn.c  4-strpbrk.c  5-strstr.c  7-print_chessboard.c  8-print_diagsums.c  README.md  main.h  md
0x08-recursion/: 0-puts_recursion.c  1-print_rev_recursion.c  100-is_palindrome.c  101-wildcmp.c  2-strlen_recursion.c  3-factorial.c  4-pow_recursion.c  5-sqrt_recursion.c  6-is_prime_number.c  README.md  _putchar.c  main.h
0x09-static_libraries/: 0-isupper.c  1-isdigit.c  100-atoi.c  2-strlen.c  2-strncpy.c  3-puts.c  3-strcmp.c  3-strspn.c  4-isalpha.c  5-strstr.c  6-abs.c  RAEDME.md  README.md
0x0A-argc_argv/: 0-whatsmyname.c  1-args.c  100-change.c  2-args.c  3-mul.c  4-add.c  README.md  _putchar.c  main.h
0x0B-malloc_free/: 0-create_array.c  1-strdup.c  100-argstostr.c  101-strtow.c  2-str_concat.c  3-alloc_grid.c  4-free_grid.c  README.md  _putchar.c  starting.txt
0x0C-more_malloc_free/: 0-malloc_checked.c  1-string_nconcat  1-string_nconcat.c  2-calloc.c  3-array_range.c  README.md  main.h
0x0D-preprocessor/: 2-main.c  3-function_like_macro.h  4-sum.h  README.md
0x0E-structures_typedef/: 1-init_dog.c  2-print_dog.c  4-new_dog.c  5-free_dog.c  README.md  dog.h
0x0F-function_pointers/: 0-print_name.c  1-array_iterator.c  100-main_opcodes.c  2-int_index.c  3-calc.h  3-get_op_func.c  3-main.c  3-op_functions.c  README.md  calc  function_pointers.h
0x10-variadic_functions/: 0-main.c  0-sum_them_all.c  1-print_numbers.c  2-main.c  2-print_strings.c  3-print_all.c  README.md  variadic_functions.h
0x12-singly_linked_lists/: 0-print_list.c  1-list_len.c  100-first.c  101-hello_holberton.asm  2-add_node.c  3-add_node_end.c  4-free_list.c  README.md  lists.h
0x13-more_singly_linked_lists/: 0-print_listint.c  1-listint_len.c  10-delete_nodeint.c  100-reverse_listint.c  101-print_listint_safe.c  102-free_listint_safe.c  103-find_loop.c  2-add_nodeint.c  3-add_nodeint_end.c  4-free_listint.c  5-free_listint2.c  6-pop_listint.c  7-get_nodeint.c  8-sum_listint.c  9-insert_nodeint.c  README.md  _putchar.c  lists.h
0x14-bit_manipulation/: 0-binary_to_uint.c  1-print_binary.c  100-get_endianness.c  2-get_bit.c  3-set_bit.c  4-clear_bit.c  5-flip_bits.c  README.md  _putchar.c  main.h
0x15-file_io/: 0-read_textfile.c  1-create_file.c  100-elf_header.c  2-append_text_to_file.c  3-cp.c  README.md  main.h
0x17-doubly_linked_lists/: 0-print_dlistint.c  1-dlistint_len.c  2-add_dnodeint.c  3-add_dnodeint_end.c  4-free_dlistint.c  5-get_dnodeint.c  6-sum_dlistint.c  7-insert_dnodeint.c  8-delete_dnodeint.c  README.md  lists.h
0x18-dynamic_libraries/: 0-isupper.c  1-isdigit.c  1-memcpy.c  101-make_me_win.sh  README.md  add.c  atoi.c  div.c  mod.c  py.h
0x18-dynamic_libraries/bbb/: mul.c  sub.c
0x1E-search_algorithms/: 0-linear.c  0-main.c  1-binary.c  100-jump.c  README.md  search_algos.h
dirty/: .in.txt.swp  15IO_2.c  15IO_3.c  15IO_4.c  15IO_5.c  2d.c  4ex_1.c  4ex_11.c  4ex_2.c  4ex_5.c  4ex_7.c  4ex_9.1.c  5bool.c  5else_3.c  5else_if.c  5else_if1.c  5else_if2.c  5ex_2.c  5ex_3.c  5ex_4.c  5ex_4_f.c  5ex_5.c  5ex_6.c  5ex_7.c  5if.1  5if.1.c  5if.2.c  5if_2_f.c  5switch.c  6arra_1.c  6arrays_2.c  6arrays_3.c  6arrays_4.c  6arrays_5.c  6arrays_6.c  6arrays_7.c  6arrays_8.c  6ex_1.c  6ex_2.c  6ex_4.c  (+103 more)
dirty/I_O_exercises/: 15ex_3.c  15ex_4.c  blackox.c  from.me  funcs.c  head.h  to.me
dirty/character_strings/: 9string_1.c  9strings_10.c  9strings_11.c  9strings_6.c  9strings_8.c  9strings_9.c  funcs.c  head.h  now_what.html  paranoia.c
dirty/js/: css.css  js1.js  testing.html
dirty/print_f/: README.md  _character.c  main.h  r2.c  r3.c  rrr.c
dirty/src/: _malloc_demo.c  _strlen.c  double.c  main.h  print_str1.c  sum_all.c
